@@ -92,7 +92,11 @@
                 }
             });
         {% else %}
-            window.location.href = '{% url "admin:login" %}?next=/{{ LANGUAGE_CODE }}/?{{ cms_edit_on }}';
+            {% if LANGUAGE_CODE %}
+                window.location.href = '{% url "admin:login" %}?next=/{{ LANGUAGE_CODE }}/?{{ cms_edit_on }}';
+            {% else %}
+                window.location.href = '{% url "admin:login" %}?next=/?{{ cms_edit_on }}';
+            {% endif %}
         {% endif %}
     </script>
 </body>
